2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i18n.h (gettext): Inline instead of using #define.
	(grub_gettext): Likewise.
	(_): Likewise.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.in (CPPFLAGS): Replace -DGRUB_LIBDIR with
	-DGRUB_PKGLIBROOTDIR= and prepend @PACKAGE_TARNAME@. All users updated.
	* util/grub-mkimage.c (image_targets): Add i386-multiboot.
	(main): Add a slash after pkglibdirroot.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Add missing "in" keyword.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Remove -O i386-pc duplication.
	Reported by: Seth Goldberg.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES: Rename util/grub-mkrawimage.c to util/grub-mkimage.c.

2010-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Check for Linux device-mapper support.

	* util/hostdisk.c (device_is_mapped): New function.
	(find_partition_start): New function, partly broken out from
	linux_find_partition and grub_util_biosdisk_get_grub_dev but with
	device-mapper support added.
	(linux_find_partition): Use find_partition_start.
	(convert_system_partition_to_system_disk): Add `st' argument.
	Support Linux /dev/mapper/* devices if device-mapper support is
	available; only DM-RAID devices are understood at present.
	(find_system_device): Add `st' argument.  Pass it to
	convert_system_partition_to_system_disk.
	(grub_util_biosdisk_get_grub_dev): Pass stat result to
	find_system_device and convert_system_partition_to_system_disk.  Use
	find_partition_start.

	* conf/common.rmk (grub_mkdevicemap_SOURCES): Add kern/env.c,
	kern/err.c, kern/list.c, kern/misc.c, and kern/emu/mm.c.
	* util/deviceiter.c [__linux__]: Define MINOR.
	(grub_util_iterate_devices): Add support for DM-RAID disk devices.
	* util/mkdevicemap.c (grub_putchar): New function.
	(grub_getkey): New function.
	(grub_refresh): New function.