@@ -35,13 +35,13 @@ all_of_them=true
 
 # FIXME: add l4 here?
 kernel=
-for i in /boot/gnumach.gz /boot/gnumach ; do
+for i in /boot/gnumach* ; do
   if test -e $i ; then
     basename=`basename $i`
     dirname=`dirname $i`
     rel_dirname=`make_system_path_relative_to_its_root $dirname`
     echo "Found GNU Mach: $i" >&2
-    kernel=${rel_dirname}/${basename}
+    kernels="${kernels} ${rel_dirname}/${basename}"
     at_least_one=true
   fi
 done
@@ -71,17 +71,22 @@ if ${all_of_them} && test -e /lib/ld.so.1 ; then : ; else
   exit 1
 fi
 
-cat << EOF
-menuentry "${OS}" ${CLASS} {
+for kernel in ${kernels}
+do
+  kernel_base="`basename "${kernel}"`"
+  KERNEL="using ${kernel_base}"
+
+  cat << EOF
+menuentry "${OS} ${KERNEL}" ${CLASS} {
 EOF
-prepare_grub_to_access_device ${GRUB_DEVICE_BOOT} | sed -e "s/^/\t/"
-cat << EOF
+  prepare_grub_to_access_device ${GRUB_DEVICE_BOOT} | sed -e "s/^/\t/"
+  cat << EOF
 	echo		'$(gettext_quoted "Loading GNU Mach ...")'
 	multiboot	${kernel} root=device:${GRUB_DEVICE#/dev/}
 EOF
-save_default_entry | sed -e "s/^/\t/"
-prepare_grub_to_access_device ${GRUB_DEVICE} | sed -e "s/^/\t/"
-cat << EOF
+  save_default_entry | sed -e "s/^/\t/"
+  prepare_grub_to_access_device ${GRUB_DEVICE} | sed -e "s/^/\t/"
+  cat << EOF
 	echo		'$(gettext_quoted "Loading the Hurd ...")'
 	module		/hurd/${hurd_fs}.static ${hurd_fs} --readonly \\
 			--multiboot-command-line='\${kernel-command-line}' \\
@@ -93,17 +98,17 @@ cat << EOF
 }
 EOF
 
-cat << EOF
-menuentry "${OS} (recovery mode)" {
+  cat << EOF
+menuentry "${OS} ${KERNEL} (recovery mode)" ${CLASS} {
 EOF
-prepare_grub_to_access_device ${GRUB_DEVICE_BOOT} | sed -e "s/^/\t/"
-cat << EOF
+  prepare_grub_to_access_device ${GRUB_DEVICE_BOOT} | sed -e "s/^/\t/"
+  cat << EOF
 	echo		'$(gettext_quoted "Loading GNU Mach ...")'
 	multiboot	${kernel} root=device:${GRUB_DEVICE#/dev/} -s
 EOF
-save_default_entry | sed -e "s/^/\t/"
-prepare_grub_to_access_device ${GRUB_DEVICE} | sed -e "s/^/\t/"
-cat << EOF
+  save_default_entry | sed -e "s/^/\t/"
+  prepare_grub_to_access_device ${GRUB_DEVICE} | sed -e "s/^/\t/"
+  cat << EOF
 	echo		'$(gettext_quoted "Loading the Hurd ...")'
 	module		/hurd/${hurd_fs}.static ${hurd_fs} \\
 			--multiboot-command-line='\${kernel-command-line}' \\
@@ -114,3 +119,5 @@ cat << EOF
 	module		/lib/ld.so.1 exec /hurd/exec '\$(exec-task=task-create)'
 }
 EOF
+
+done
